# connect-rust

./: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile  encoding_to_game_board.py  game_board_to_encoding.py
.github/workflows/: connect_rust_tests.yml  rust.yml
benches/: main.rs
benchmark/: Test_L3_R1  benchmark.rs
benchmark/benchmarks/: Test_L1_R1  Test_L1_R3  Test_L3_R2
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
benchmarks/src/benchmarks/: Test_L1_R2  Test_L2_R1  Test_L2_R2
connect_rust/: Cargo.toml
connect_rust/src/: helpers.rs  lib.rs  main.rs  players.rs  response_handling.rs  webserver_handling.rs
connect_rust/src/helpers/: encoding_gamestates.rs  moves.rs  state_of_game.rs  turns.rs
connect_rust/src/players/: bruteforce.rs  bruteforce_n_percent.rs  monte_carlo.rs  random.rs  random_glowed_up.rs
connect_rust/src/players/bruteforce/: move_ordering.rs  negamax.rs  opening_gamestate_lookup_table.rs
connect_rust/src/players/monte_carlo/: monte_carlo_helpers.rs
connect_rust/src/response_handling/: how_to_play_html_template.rs  how_to_play_testing.html  outgoing.rs  start_page_html_template.rs  start_page_testing.html
connect_rust/src/webserver_handling/: how_to_play_html_template.rs  incoming.rs  outgoing.rs  start_page_html_template.rs
lookup_table_generator/: Cargo.toml  lookup_table_generator.rs
response_lookup_table/: response_lookup_table.rs
src/: gamestate_helpers.rs  helpers.rs  html_template.rs  lib.rs  logging.rs  main.rs  multithreading.rs  players.rs  response_handling.rs  setup.rs
src/helpers/: moves.rs  (+5 more)
(+20 files in other folders)
