[package]
name = "connect-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial_test = "2.0.0"
rand = "0.8.5"
connect-rust-graphs = { git = "https://github.com/RaoulLuque/connect-rust-graphs" }