[package]
name = "connect_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.74"
authors = ["Raoul Luque <raoulsluque@gmail.com>"]
description = "Benchmarking for connect-rust"
repository = "https://github.com/RaoulLuque/connect-rust"

[dependencies]
serial_test = "2.0.0"
rand = "0.8.5"
connect-rust-graphs = { git = "https://github.com/RaoulLuque/connect-rust-graphs" }
axum = "0.7.2"
minijinja = { version = "1.0.10", features = ["builtins"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "connect-rust"
path = "src/main.rs"
